# ComRed

./: .gitignore  .travis.yml  CMakeLists.txt
DB/: CMakeLists.txt  db_config.txt  db_create.txt
DB/inc/: AbstractDBController.h  DocumentRepository.h  UserRepository.h
DB/include/: DBController.h  DocumentRepository.h  UserRepository.h
DB/src/: DBController.cpp  DocumentRepository.cpp  UserRepository.cpp
DB/test/: testDB.cpp
HTTPServer/: CMakeLists.txt  DartConfiguration.tcl  configure_gtest.cmake  install_gtest.cmake
HTTPServer/googletest-download/: CMakeLists.txt
HTTPServer/include/client/: Client.h
HTTPServer/include/controller/: BaseController.h  ConnectController.h  ConnectControllerCreator.h  Controller.h  ControllerCreator.h  CreateController.h  CreateControllerCreator.h  DeleteController.h  DeleteControllerCreator.h  EditController.h  EditControllerCreator.h  LoginController.h  LoginControllerCreator.h  LogoutController.h  LogoutControllerCreator.h  RegistrationController.h  RegistrationControllerCreator.h  controllers.h
HTTPServer/include/requests/: Header.h  Reply.h  Request.h  RequestHandler.h  RequestParser.h
HTTPServer/include/server/: BasicResponses.h  Connection.h  ConnectionManager.h  Listener.h  Server.h  handleRequest.h
HTTPServer/include/server/controller/: ConnectController.h  Controller.h  CreateController.h  DeleteController.h  EditController.h  LoginController.h  LogoutController.h  RegistrationController.h  controllers.h
HTTPServer/src/: ConnectController.cpp  ConnectControllerCreator.cpp  Connection.cpp  ConnectionManager.cpp  Controller.cpp  ControllerCreator.cpp  CreateController.cpp  CreateControllerCreator.cpp  DeleteController.cpp  DeleteControllerCreator.cpp  EditController.cpp  EditControllerCreator.cpp  LoginController.cpp  LoginControllerCreator.cpp  LogoutController.cpp  LogoutControllerCreator.cpp  RegistrationController.cpp  RegistrationControllerCreator.cpp  RequestHandler.cpp  RequestParser.cpp  main.cpp  server.cpp
HTTPServer/test/: CMakeLists.txt  controllers_test.cpp  server_run_test.cpp  server_tests.cpp
ServerApplication/: CMakeLists.txt  Editor.h  EditorManager.h  UserManager.h  main.cpp  undefStructs.h
ServerApplication/include/: DocumentManager.h  Editor.h  EditorManager.h  EditorManagerDelegate.h  ServerApplication.h  ServerHeader.h  Session.h  UserManager.h  undefStructs.h
ServerApplication/src/: DocumentManager.cpp  Editor.cpp  EditorManager.cpp  ServerApplication.cpp  Session.cpp  UserManager.cpp
ServerApplication/test/: test.cpp
Utils/: CMakeLists.txt
Utils/include/: BaseChange.h  ContentChange.h  Diaposon.h  DiaposonChange.h  Document.h  IndexChange.h  Operation.h  User.h  Users.h
Utils/src/: BaseChange.cpp  ContentChange.cpp  Diaposon.cpp  DiaposonChange.cpp  Document.cpp  IndexChange.cpp  Operation.cpp  User.cpp
app/: CMakeLists.txt
test/: CMakeLists.txt
